--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="livevisuals.html"> <img src="" alt="" class="img-fluid"/>
         <div class="caption"><span>performance</span></div>
         </a> </div>
-  <div class="col-4 draggable floating" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href="forsell.html"> <img src="" alt=""/>
+  <div class="col-4 draggable floating" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href=""> <img src="" alt=""/>
         <div class="caption" style="text-decoration-line: line-through"><span>! updating website !</span></div>
         </a> </div>
 	
