--- a/iii.html
+++ b/iii.html
@@ -46,7 +46,7 @@
       Participants will be introduced to Supercollider, Ixi-Lang and the Supercollider Pattern Library, starting from a low-level and conducting to the development of audio and midi/osc-control patterns that may be used in conjunction with video or VJ applications (as Resolume, VVVV, Max/Jitter, etc.) that can be controlled by live coding." <br>
       <br><br>
       <b>III I</b><br>
-      Audiovisual live coding performace, Aula Mana, FBAUP, Porto 2015<br>
+      Audiovisual live coding performance, Aula Mana, FBAUP, Porto 2015<br>
      
     </div>
 <br>
@@ -78,7 +78,7 @@
 <br>
 <br>
 <div class="texto"><b>III II</b> <br>
-      Audiovisual live coding performace, Future Places Festival, Passos de Manuel, Porto 2015<br>
+      Audiovisual live coding performance, Future Places Festival, Passos de Manuel, Porto 2015<br>
       <br>
       <img src="images/III/passoslive2.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/III/passoslive1.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
       <br>
