--- a/about2.html
+++ b/about2.html
@@ -35,16 +35,16 @@
   </div>
     <img src="images/hands.jpg" height="502px" width="670px" class="img-fluid" alt="">
     <div class="texto"><br><br>
-       
+       	
         Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops.<br>
 		
 		
-		<!--<b>Professional Experience</b> <br>
+	<!--	<b>Professional Experience</b> <br>
 		<br> 
 		Interactive Developer<br>
 		Multimedia Designer<br>
 		A/V Techinician<br>
-		Video operator + Editor <br>-->
+		Video Editor + Operator <br>-->
 		
 		<br><br>
 		For work, collaborations or more details contact:<br>
