--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="caption"><span>performance</span></div>
         </a> </div>
   <div class="col-4 draggable floating" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href=""> <img src="" alt=""/>
-        <div class="caption" style="text-decoration-line: line-through"><span>! updating website !</span></div>
+        <div class="caption" style="text-decoration-line: line-through"><span>site-in-progress</span></div>
         </a> </div>
 	
     </div>
