--- a/mosaico.html
+++ b/mosaico.html
@@ -84,9 +84,9 @@
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/mosaico/mosaico7.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico8.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico8.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico9.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico9.jpg"
         alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico10.jpg"
         alt=""> </div>
