--- a/sound.html
+++ b/sound.html
@@ -130,7 +130,7 @@ Edited by Favela Discos<br>
 </div>
   </div>
 	<div class="container">
-      <div class=" col-4 draggable" style="margin: 40px 0px 20px 0px"><a class="thumb" href="about2.html"> <img src="" alt=""/>
+      <div class=" col-4 draggable" style="margin: 40px 0px 20px 0px"><a class="thumb" href="about.html"> <img src="" alt=""/>
         <div class="caption"><span>about</span></div>
         </a> </div>
       <div class="col-4 draggable" style="margin: 120px 0px 80px 0px;"> <a class="thumb" href="projects.html"> <img src="" alt=""/>
