--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       <div class=" col-4 draggable" style="margin: 40px 0px 20px 0px"><a class="thumb" href="about2.html"> <img src="" alt=""/>
         <div class="caption"><span>about</span></div>
         </a> </div>
-      <div class="col-4 draggable" style="margin: 120px 0px 80px 0px;"> <a class="thumb" href="projects.html"> <img src="" alt=""/>
+      <div class="col-4 draggable" style="margin: 120px 0px 80px 0px;"> <a class="thumb" href="selectedworks.html"> <img src="" alt=""/>
       <div class="caption"><span>selected work</span></div>
   </a> </div>
   <!--    <div class="col-4 draggable" style="margin: 80px 0px 0px 0px;"> <a class="thumb" href="#"> <img src="" alt=""/>
