--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    <!--   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="curated.html"> <img src="" alt=""/>
         <div class="caption"><span>curated</span></div>
         </a> </div>-->
-      <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="livevisuals.html"> <img src="" alt="" class="img-fluid"/>
+      <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="performance.html"> <img src="" alt="" class="img-fluid"/>
         <div class="caption"><span>performance</span></div>
         </a> </div>
   <div class="col-4 draggable floating" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href=""> <img src="" alt=""/>
