--- a/music.html
+++ b/music.html
@@ -151,7 +151,7 @@ Edited by Favela Discos<br>
    <!--   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="curated.html"> <img src="" alt=""/>
         <div class="caption"><span>curated</span></div>
         </a> </div>-->
-      <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="livevisuals.html"> <img src="" alt="" class="img-fluid"/>
+      <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="performance.html"> <img src="" alt="" class="img-fluid"/>
         <div class="caption"><span>performance</span></div>
         </a> </div>
     <!-- <div class="col-4 draggable" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href="forsell.html"> <img src="" alt=""/>
