--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
        	
     Inês Castanheira is a transdisciplinary artist and researcher based in Portugal. Her work is a continuous dialogue between art and technology, exploring and combining image, sound, electronics, coding and interactivity.  She develops projects in multiple domains and collaborative environments, often in the form of video, installations, electronic objects, live visuals, audiovisual performances, concerts and workshops.
     Over the past few years, she has been researching and experimenting with DIY strategies, hacking and creative recycling of obsolete or discarded electronics.
-    In 2014 received a master degree in Image Design at School of Fine Arts, University of Oporto. In 2012 graduated from the School of Music and Performing Arts of Oporto in Multimedia Communication Technology.<br>
+   <br> In 2014 received a master degree in Image Design at School of Fine Arts, University of Oporto. In 2012 graduated from the School of Music and Performing Arts of Oporto in Multimedia Communication Technology.<br>
 		
 		
 	<!--	<b>Professional Experience</b> <br>
