--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
 		Video Editor + Operator <br>-->
 		
 		<br><br>
-		For work, collaborations or more details contact:<br>
+		For more details contact:<br>
         ines.castanheira@protonmail.com<br>
 		<br>
 		
-		<b>Links</b> <br>
+		<!--<b>Links</b> <br>
 		<a href="https://vimeo.com/castanheira" target="_blank">Vimeo</a><br><a href="https://www.instagram.com/1c.1c.1c" target="_blank">Instagram</a>
-		
+		-->
 		<br>
 <!--	<br> website by Inês Castanheira</div>
 -->    </div>
