--- a/sinewave.html
+++ b/sinewave.html
@@ -38,7 +38,7 @@
 <br>
           Music - David Ole, Dora Vieira, João Sarnadas, Nuno Oliveira, Tito Silva <br>
 		
-		Live visuals - Inês Castanheira - Made with TouchDesigner <br>
+		Live visuals - Inês Castanheira  <br>
         
         </div>
     <br>
