--- a/expand.html
+++ b/expand.html
@@ -63,7 +63,11 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
 <div class="texto"><b>Residency Project</b> <br>
       Li#gH%t <br>
       <br>
-      During the residency, light materials, electric candles, toys and other devices were collected in search of new sounds to be implemented in the installation. The electronic materials found have been reconfigured through the process of exploratory hacking of its interior and exterior, seeking to build new tangible, sound and visual possibilities, to develop a set of sound and visual objects that can be used in the context of interactive installation in contact with the public. </div>
+	 explores the hidden sounds and melodies present in the flashing light of electronic consumer devices, such as electric candles, toys and decoration lights.
+      During the residency, hidden sounds and melodies present in the flashing light of electronic consumer devices, such as electric candles, toys and other devices were collected and explored to be presented in the format of an interactive sound installation. 
+	In this installation, the public is invited to discover the hidden sounds by manipulating them in games of light and sound using photovoltaic cell panels for playing and controlling the sounds present on the displayed objects.
+	
+ </div>
 <br>
 <br>
 <img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="">
