--- a/expand.html
+++ b/expand.html
@@ -63,7 +63,7 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
 <div class="texto"><b>Residency Project</b> <br>
       Li#gH%t <br>
       <br>
-      During the residency, hidden sounds and melodies present in the flashing light of electronic consumer devices, such as electric candles, toys and other devices were collected and explored to be presented in the format of an interactive sound installation. 
+      During the residency, hidden sounds and melodies present in the flashing light of electronic consumer devices, such as electric candles, toys and other devices were collected and explored for the construction of an interactive sound installation. 
 	In this installation, the public is invited to discover the hidden sounds by manipulating them in games of light and sound using photovoltaic cell panels for playing and controlling the sounds present on the displayed objects.
 	
  </div>
