--- a/light.html
+++ b/light.html
@@ -104,7 +104,7 @@ To listen to the different sounds behind the light effect of the LED, a photovol
     <a href="expand.html"># residency project link</a></div>
       <img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="">
 	<img src="images/expand/expand12.jpg" height="1500" width="2250" class="img-fluid" alt="">
-      <div id="carouselexpand2" class="carousel slide" data-ride="carousel">
+<!--      <div id="carouselexpand2" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/expand7.JPG"
         alt="First slide"> </div>
@@ -114,7 +114,7 @@ To listen to the different sounds behind the light effect of the LED, a photovol
         alt="Third slide"> </div>
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselexpand2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselexpand2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
-  </div>
+  </div>-->
 	
 	<br>
 	<br>
