--- a/light.html
+++ b/light.html
@@ -121,19 +121,11 @@ To listen to the different sounds behind the light effect of the LED, a photovol
 	      <div class="texto"><b>Presentation at Ciência Viva, Pavilhão do Conhecimento, Lisboa 2019</b> <br>
   </div>
       <br>
-      <div id="carouselexpand4" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/ciencia1.JPG"
-        alt="First slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/ciencia2.JPG"
-        alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/ciencia3.JPG"
-        alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/expand/ciencia4.JPG"
-        alt="Second slide"> </div>
-        </div>
-    <div class="arrows"> <a class="carousel-control-prev" href="#carouselexpand4" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselexpand4" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
-  </div> </div>
+      
+  
+         <img class="d-block w-100" src="images/expand/ciencia1.JPG">
+      
+
 	<br>
 <div class="container">
       <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
