--- a/light.html
+++ b/light.html
@@ -49,19 +49,7 @@ To listen to the different sounds behind the light effect of the LED, a photovol
         Rosa Imunda, Porto 2016 </b> <br>
     Group Exhibition</div>
       <br>
-      <div id="carousellight1" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/light/lightrosa1.jpg"
-        alt="First slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightrosa2.jpg"
-        alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightrosa3.jpg"
-        alt="Third slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/light/lightrosa4.jpg"
-        alt="Third slide"> </div>
-        </div>
-    <div class="arrows"> <a class="carousel-control-prev" href="#carousellight1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousellight1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
-  </div>
+ <img class="d-block w-100" src="images/light/lightrosa3.jpg">
       <br>
       <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/259377673?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen ></iframe>
