--- a/ataripunkconsole.html
+++ b/ataripunkconsole.html
@@ -38,7 +38,7 @@
     OpenField, Porto, 2016 <br>
     Coordination - Inês Castanheira, Mariana Sardon <br>
     <br>
-    Make your own synth! </div>
+    Make your own sound generator! </div>
       <br>
       <br>
       <img src="images/ataripunk/atari1.JPG" height="1500" width="2250" class="img-fluid" alt=""> 
