--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
      </div>
 		<br>
 		<br>
-<div class="container">
+<!--<div class="container">
       <div class=" col-4 draggable" style="margin: 40px 0px 20px 0px"><a class="thumb" href="about2.html"> <img src="" alt=""/>
         <div class="caption"><span>about</span></div>
         </a> </div>
@@ -71,7 +71,7 @@
   </a> </div>
   <!--    <div class="col-4 draggable" style="margin: 80px 0px 0px 0px;"> <a class="thumb" href="#"> <img src="" alt=""/>
         <div class="caption"><span>exhibitions</span></div>
-        </a> </div>-->
+        </a> </div>
       <div class="col-4 draggable"  style="margin: 30px 0px 0px 0px;"> <a class="thumb" href="music.html"> 
       <div class="caption"><span>music</span></div><img src="" alt="" class="img-fluid"/>
         </a> </div>
@@ -83,7 +83,7 @@
         </a> </div>
    <!--   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="curated.html"> <img src="" alt=""/>
         <div class="caption"><span>curated</span></div>
-        </a> </div>-->
+        </a> </div>
       <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="performance.html"> <img src="" alt="" class="img-fluid"/>
         <div class="caption"><span>performance</span></div>
         </a> </div>
