--- a/diadia.html
+++ b/diadia.html
@@ -34,6 +34,8 @@
     </div>
    
     <img src="images/music/dia1.jpg" height="1500" width="2250" class="img-fluid" alt="">
+	  <br>
+	  <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=714384680/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="https://welll.bandcamp.com/album/dia-dia">Dia Dia by Well</a></iframe><br>
     <div class="texto"> <br>
       'Dia-a-dia' is a generative sound piece in which the acoustic, the digital and the analogue intersect in a three-voice composition. In dialogue are several field captures and a set of notes played on an upright piano, both programmed through a patch in Pure Data, as well as a set of drones emitted by a homemade synthesizer, recorded in several long, desynchronized loops. These voices end up creating a sequence of distinct sound spaces, which feed us with a continuous and full melody, and a feed of sometimes strange, sometimes familiar sounds that evoke a space kept in the personal memory of each one. The scale used in the piece was chosen due to the ghazal "Woh Ishq Jo Humse", which we know in the voice of Farida Khanum, but you can easily hear other songs populating the composition. <br>
       <br>
