--- a/workshops.html
+++ b/workshops.html
@@ -32,6 +32,10 @@
 		<br>
 <div class="container">
 	
+	<div class=" col-4 draggable col-xl-3" style="margin: 30px 20px 0px 0px"><a class="thumb" href="circuitbendingdentro.html"> <img src="images/circuitbending/circuit4.jpg"alt=""/>
+        <div class="caption2"><span>Circuit Bending</span></div>
+        </a> </div>
+	
 	<div class=" col-4 draggable col-xl-4" style="margin: 90px 0px 0px 0px"><a class="thumb" href="aparelhos.html"> <img src="images/aparelho/aparelho11.jpg"alt=""/>
         <div class="caption2"><span>Construção de Aparelhos Sonoros</span></div>
         </a> </div>
@@ -40,21 +44,19 @@
         <div class="caption2"><span>Circuit Bending e Hacking de consolas de vídeo </span></div>
         </a> </div>
 	
-	 <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="geradores.html"> <img src="images/geradores/geradores1.jpg"alt=""/>
+	 <div class=" col-4 draggable" style="margin: 40px 20px 10px 30px"><a class="thumb" href="geradores.html"> <img src="images/geradores/geradores1.jpg"alt=""/>
         <div class="caption2"><span>Geradores</span></div>
         </a> </div>
 	
 	     <div class="col-4 draggable"  style="margin: 60px 0px 0px 40px;"> <a class="thumb" href="ataripunkconsole.html"> <img src="images/ataripunk/atari40.jpg" alt=""/>
         <div class="caption2"><span>Atari Punk Console</span></div>  </a> </div>
 	
-      <div class=" col-4 draggable col-xl-5" style="margin: 0px 40px 0px 60px"><a class="thumb" href="sonstempo.html"> <img src="images/sonstempo/sonstempo1.jpg"alt=""/>
+      <div class=" col-4 draggable col-xl-5" style="margin: 20px 40px 0px 60px"><a class="thumb" href="sonstempo.html"> <img src="images/sonstempo/sonstempo1.jpg"alt=""/>
         <div class="caption2"><span>Sons para fazer tempo </span></div>
         </a> </div>
 	
-      
-	
  
-     <div class="col-4 draggable" style="margin: 40px 0px 0px 0px;"> <a class="thumb" href="gamestothepeople.html"> <img src="images/games/games8.jpg" alt=""/>
+     <div class="col-4 draggable col-xl-5" style="margin: 40px 40px 0px 20px;"> <a class="thumb" href="gamestothepeople.html"> <img src="images/games/games8.jpg" alt=""/>
         <div class="caption2"><span>Games to the People</span></div>
         </a> </div>
     </div>
