--- a/light.html
+++ b/light.html
@@ -79,7 +79,8 @@
   <img src="images/expand/expand2.JPG" height="1500" width="2250" class="img-fluid" alt=""> <br>
   <br>
   "EXPAND! Art, Science and Technology Residencies is a collaboration between O Espaço do Tempo, Ciência Viva and Audiência Zero. Together, we promote research projects in the digital arts with a strong technology research dimension. Over two weeks we will bring together creators at the intersection of art, science and technology to develop 11 prototypes of science mediation with a strong creative dimension. These contents will be presented to the public in two different moments: an exhibition at the Espaço do Tempo, in Montemor-o-Novo, organized with the local School Group; and an exhibition at the Pavilion of Knowledge – Ciência Viva Centre in Lisbon. The latter, scheduled for March 2019, will also include informal talks with artists in a relaxed sharing environment." </div>
-<img src="images/expand/expand7.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/expand/expand1.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
+<img src="images/expand/expand7.jpg" height="1500" width="2250" class="img-fluid" alt="">
+	<img src="images/expand/expand1.JPG" height="1500" width="2250" class="img-fluid" alt=""> <br>
 <br>
 <div class="texto"><b>Exhibition at Frigatriscaidecafobia
   Rosa Imunda, Porto 2016 </b> </div>
@@ -114,27 +115,5 @@
 <br>
 <br>
 <br>
-<!--<div class="container">
-      <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
-        <div class="caption"><span>Alvor </span></div>
-        </a> </div>
-      <div class="col-4 draggable" style="margin: 0px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
-        <div class="caption"><span>Mosaico</span></div>
-        </a> </div>
-      <div class="col-4 draggable"  style="margin: 30px 0px 0px 0px;"> <a class="thumb" href="spacetime.html"> <img src="" alt=""/>
-        <div class="caption"><span>space-time</span></div>  </a> </div>
-      <div class="col-4 draggable" style="margin: 80px 0px 0px 0px;"> <a class="thumb" href="piupiupiu.html"> <img src="" alt=""/>
-        <div class="caption"><span>P#i¶îuPi‰Piu</span></div>
-        </a> </div>
-      <div class="col-4 draggable" style="margin: 80px 10px 0px 10px;"> <a class="thumb" href="light.html"> <img src="" alt=""/>
-        <div class="caption"><span>Li#gH%t</span></div>
-        </a> </div>
-      
-     
-	   <div class="col-4 draggable" style="margin: 50px 0px 95px 50px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
-        <div class="caption"><span>E-waste Panel</span></div>
-        </a> </div>
-	
-    </div>-->
 </body>
 </html>
