--- a/light.html
+++ b/light.html
@@ -79,7 +79,6 @@
   <img src="images/expand/expand2.JPG" height="1500" width="2250" class="img-fluid" alt=""> <br>
   <br>
   "EXPAND! Art, Science and Technology Residencies is a collaboration between O Espaço do Tempo, Ciência Viva and Audiência Zero. Together, we promote research projects in the digital arts with a strong technology research dimension. Over two weeks we will bring together creators at the intersection of art, science and technology to develop 11 prototypes of science mediation with a strong creative dimension. These contents will be presented to the public in two different moments: an exhibition at the Espaço do Tempo, in Montemor-o-Novo, organized with the local School Group; and an exhibition at the Pavilion of Knowledge – Ciência Viva Centre in Lisbon. The latter, scheduled for March 2019, will also include informal talks with artists in a relaxed sharing environment." </div>
-<img src="images/expand/expand7.jpg" height="1500" width="2250" class="img-fluid" alt="">
 	<img src="images/expand/expand1.JPG" height="1500" width="2250" class="img-fluid" alt=""> <br>
 <br>
 <div class="texto"><b>Exhibition at Frigatriscaidecafobia
@@ -87,7 +86,7 @@
 <br>
 <br>
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/259377673?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen ></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/H2txlSh2YF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 <br>
 <br>
