--- a/light.html
+++ b/light.html
@@ -93,7 +93,7 @@ Several candles have been collected for this project, searching for the noises, 
 <br>
 <br>
 <img src="images/light/lightcaaa7.png" height="1500" width="2250" class="img-fluid" alt="">
-<div id="carousellight2" class="carousel slide" data-ride="carousel">
+<!--<div id="carousellight2" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active"> <img class="d-block w-100" src="images/light/lightcaaa2.png"
         alt="First slide"> </div>
@@ -105,7 +105,7 @@ Several candles have been collected for this project, searching for the noises, 
         alt="Third slide"> </div>
   </div>
   <div class="arrows"> <a class="carousel-control-prev" href="#carousellight2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousellight2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
-</div>
+</div>-->
 <br>
 <br>
 <br>
