--- a/light.html
+++ b/light.html
@@ -66,7 +66,7 @@ Several candles have been collected for this project, searching for the noises, 
 <br>
 <br>
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/F4-lsM-akxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/AnxNGPqJ0oI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 <br>
 <br>
@@ -87,7 +87,6 @@ Several candles have been collected for this project, searching for the noises, 
 </div>
 <br>
 <br>
-<script src="https://player.vimeo.com/api/player.js"></script>
 <div class="texto"><b>Exhibition at Louro e Bambu – segundo acto, figuração do exótico
   CAAA, Guimarães 2015 </b> </div>
 <br>
